syntax = "proto3";

package message_service.users.v1;

option go_package = "api/message_service/users/v1;usersv1";

import "message_service/users/v1/user.proto";

message UpdateStatusRequest {
  int64 user_id = 1;
  bool online = 2;
}
